--- a/regexes/client/pim.yml
+++ b/regexes/client/pim.yml
@@ -1,16 +1,12 @@
 ###############
 # Device Detector - The Universal Device Detection library for parsing User Agents
 #
-# @link https://matomo.org
+# @link http://piwik.org
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
 - regex: 'Outlook-Express(?:/(\d+[\.\d]+))?'
   name: 'Outlook Express'
-  version: '$1'
-
-- regex: 'Microsoft Outlook(?:[/ ](\d+[\.\d]+))?'
-  name: 'Microsoft Outlook'
   version: '$1'
 
 - regex: '(?:Thunderbird|Icedove|Shredder)(?:/(\d+[\.\d]+))?'
@@ -40,12 +36,47 @@
 - regex: 'The Bat!(?: Voyager)?(?:[/ ](\d+[\.\d]+))?'
   name: 'The Bat!'
   version: '$1'
+  
+- regex: '(MSOffice 16|Outlook 16)'
+  name: 'Microsoft Outlook'
+  version: 2016
 
-- regex: 'DAVdroid(?:/(\d+[\.\d]+))?'
-  name: 'DAVdroid'
+- regex: '(MSOffice 15|Outlook 15)'
+  name: 'Microsoft Outlook'
+  version: 2013
+
+- regex: '(MSOffice 14|Outlook 14)'
+  name: 'Microsoft Outlook'
+  version: 2010
+ 
+- regex: '(MSOffice 12)'
+  name: 'Microsoft Outlook'
+  version: 2007
+ 
+- regex: '(MSOffice 11)'
+  name: 'Microsoft Outlook'
+  version: 2003
+ 
+- regex: '(MSOffice 10)'
+  name: 'Microsoft Outlook'
+  version: XP
+ 
+- regex: '(MSOffice 9)'
+  name: 'Microsoft Outlook'
+  version: 2000
+ 
+- regex: '(MSOffice 8)'
+  name: 'Microsoft Outlook'
+  version: 97
+ 
+- regex: '(MSOffice 7)'
+  name: 'Microsoft Outlook'
+  version: 95
+ 
+- regex: 'Microsoft Outlook(?:[/ ](\d+[\.\d]+))?'
+  name: 'Microsoft Outlook'
   version: '$1'
-
-# SeaMonkey
-- regex: '(?:SeaMonkey|Iceape)(?:/(\d+[\.\d]+))?'
-  name: 'SeaMonkey'
+  
+- regex: 'Microsoft Outlook Mail(?:[/ ](\d+[\.\d]+))?'
+  name: 'Microsoft Outlook'
   version: '$1'
